fixat lite bättre spacing, placerat recaptcha, fixat backdropfilter i nav, fixat font

--- a/src/components/AboutSection/aboutSection.css
+++ b/src/components/AboutSection/aboutSection.css
@@ -1,6 +1,7 @@
 .site-section--about {
     grid-template-columns: repeat(5, minmax(0, 1fr));
     min-height: 55rem;
+    position: relative;
 }
 
 .site-section--about> :nth-child(1) {
@@ -32,14 +33,10 @@
     grid-row: 2/3;
 }
 
-
-
-
-
-
 .site-section--about> :nth-child(3) div {
     grid-template-rows: auto 1fr;
 }
+
 
 @media screen and (max-width: 700px) {
     .site-section--about> :nth-child(1) {
